--- a/assembl/static/css/components/_message.scss
+++ b/assembl/static/css/components/_message.scss
@@ -360,7 +360,7 @@ $previewNumLines: 4;
     padding: 0 $mesageSpacing 0 $mesageSpacing;
     margin-left: -$mesageSpacing;
     position: absolute;
-    z-index: 1000;
+    z-index: $zindex-read-unread-indicator;
     top: 0;
     right: 0;
   }
